src/App.css
/* Parent | Main file to declare globally */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,700&display=swap');
/* font-family: 'Montserrat', sans-serif;
font-family: 'Poppins', sans-serif; */

/* @tailwind base;
@tailwind components;
@tailwind utilities; */

/* Check overflow  */

/* div,p {
  outline : 2px solid green;
} */


body{


  font-family: 'Poppins', sans-serif; 
  background-color: #F3F3F3;
  width: 100%;
  overflow-x: hidden;
  min-height: 100vh;

  /* animation-duration: 20s;  */
}

body::-webkit-scrollbar{
  display: none;
}
*{
  margin: 0;
  padding: 0;
}
section{
  min-height: 100vh;
}


/*  */

/* Bottom-Top Button */
.scroll-top{

  position: fixed;
  /* visibility: hidden;
  opacity: 0; */
  right: 25px;
  bottom: -5px;
  z-index: 996;
  /* background-color: #CC281E; */
  background-color: #F3F3F3;
  box-shadow: 0px 0px 24px rgba(24, 1, 0, 0.259);
	/* background-size: 400% 400%; */
	animation: gradient 12s ease infinite;
  /* width: 50px; */
  height: 50px;
  border-radius: 4px;
  transition: all 0.4s;
  opacity: 60%;
  backdrop-filter: blur(6px);


}
.scroll-top img {
  padding-top: 2.5px;
  width: 34px;
  /* line-height: 0; */
}

.scroll-top:hover {
  box-shadow: 0px 0px 24px rgba(204, 39, 30, 0.25);
  transform: translateY(6px);
  height: 65px;

  opacity: 100%;
	animation: gradient 22s ease infinite;
  transition: .5s;
  
  /* box-shadow: 0px 0px 23px #cc/ff00c9; */
}
/* @media (max-width: 768px) {
  .home .row {
    margin-top: -3cm;
  }
} */

.scroll-top.active {
  visibility: visible;
  opacity: 1;
  bottom: 15px;
}

.chatbot,.chatbotContainer{

  position: fixed;
  /* visibility: hidden;
  opacity: 0; */
  right: 50px;
  bottom: -5px;
  z-index: 996;

  

}
.chatbot{
  width: 350px;
  height : 400px;
  padding: 15px;
}
.chatbotContainer{
  height: 480px;
  width: 350px;
  background-color: #97050500;
}
.close-btn{ 

  text-decoration: none;
  font-size: 25px;
  color: rgb(0, 0, 0);
  /* margin-top: 10px */
  position:fixed;
  right: 360px;
  bottom: 390px;
}
.modal{
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position:fixed;
  background-color:rgba(0,0,0,0.308);
  /* backdrop-filter: blur(1px); */
}
.modal-not-visible{
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position:fixed;
  background-color:rgba(0,0,0,0.308);
  display: none;
}
.add-btn{
  /* padding: 15px; */

  background-color:rgba(240, 248, 255, 0.43);
  border-radius: 10px;
  text-decoration: none;
  text-transform: uppercase;
  color: black;
}

.add-btn{

  position: fixed;
  right: 50px;
  bottom: 70px;
  height: 50px;
  width: 50px;
  z-index: -1;
  background-color:rgba(240, 248, 255, 0.671);
}
@media screen and (max-width: 470px){
  .close-btn{
    bottom:410px;
    right: 270px;
  }
  .chatbot{
    width: 300px;
    height : 400px;
    right: 10px;
    bottom: 15px;
  }
  .add-btn{
    right: 50px;
    bottom: 70px;
  }
}

/*--------------------------------------------------------------
# Preloader
--------------------------------------------------------------*/
#preloader {
  position: fixed;
  inset: 0;
  z-index: 999999;
  overflow: hidden;
  background: #CC281E;
  transition: all 0.6s ease-out;
}

#preloader:before {
  content: "";
  position: fixed;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  border: 6px solid #fff;
  /* border-color: var(--color-primary) transparent var(--color-primary) transparent; */
  border-radius: 50%;
  width: 60px;
  height: 60px;
  -webkit-animation: animate-preloader 1.5s linear infinite;
  animation: animate-preloader 1.5s linear infinite;
}

@-webkit-keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-preloader {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

